# BotW-Quest-Tracker

./: LICENSE  README.md  pyproject.toml
data/: main_quests.txt  shrine_quests.txt  side_quests.txt
src/: tracker.py  utils.py  window_capture.py
